# fdtables

./: .gitignore  Cargo.toml  README.md  run_all
benches/: primitives.rs  virt_basics.rs
docs/: close_virtualfd.md  convert_realfds_back_to_virtual.md  convert_virtualfds_for_poll.md  convert_virtualfds_to_real.md  copy_fdtable_for_cage.md  empty_fds_for_exec.md  epoll_add_underfd.md  epoll_create_helper.md  epoll_get_underfd_hashmap.md  fdtableentry.md  get_bitmask_for_select.md  get_epoll_wait_data.md  get_optionalinfo.md  get_real_bitmasks_for_select.md  get_specific_virtual_fd.md  get_unused_virtual_fd.md  get_virtual_bitmasks_from_select_result.md  init_empty_cage.md  register_close_handlers.md  remove_cage_from_fdtable.md  return_fdtable_copy.md  set_cloexec.md  set_optionalinfo.md  translate_virtual_fd.md  try_epoll_ctl.md
impl_macros/: dashmap
src/: .threei.rs.swp  commonconstants.rs  dashmaparrayglobal.rs  dashmapglobal.rs  dashmapvecglobal.rs  lib.rs  main.bak  muthashmaxglobal.rs  threei.rs  vanillaglobal.rs
