[package]
name = "fdtables"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"]}

[[bench]]
name = "virt_basics"
path = "benches/virt_basics.rs"
harness= false
